--- a/integrations/sqlite.ini
+++ b/integrations/sqlite.ini
@@ -7,8 +7,7 @@ PATH    = integrations/gitea-integration-sqlite/gitea.db
 
 [indexer]
 ISSUE_INDEXER_PATH   = integrations/indexers-sqlite/issues.bleve
-REPO_INDEXER_ENABLED = true
-REPO_INDEXER_PATH    = integrations/indexers-sqlite/repos.bleve
+REPO_INDEXER_ENABLED = false
 
 [repository]
 ROOT = integrations/gitea-integration-sqlite/gitea-repositories
